<!--
  ~ Created by James Henderson on 2017
  ~ Copyright (c) Hendercine Productions and James Henderson 2017.
  ~ All rights reserved.
  ~
  ~ Last modified 11/3/17 5:06 PM
  -->

<resources>
    <string name="app_name">Baking Time</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="action_settings">Settings</string>
    <string name="card_text_place_holder">Recipe Name</string>
    <string name="recipe_ingredients_btn">Recipe Ingredients</string>
    <string name="video_not_found">Video not found!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>
    <string name="instructions">Instructions</string>
    <string name="notification_text">Press play to watch the video</string>
    <string name="no_internet">No network available, please check your WiFi or Data connection</string>
    <string name="next_step_btn">Next Step</string>
    <string name="previous_step_btn">Previous Step</string>
    <string name="ingredient_text_placeholder">vanilla</string>
    <string name="ingredient_measure_placeholder">TBLSPs</string>
    <string name="ingredient_quantity_placeholder">2</string>
    <string name="remove_fragment_listener_error">must implement the remove fragement listener to use this fragment!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">Nothing to see here…</string>
    <string name="loading">Loading…</string>
    <string name="network_is_online">Device is connected!</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="step_thumbnail_image">Step thumbnail image.</string>
    <string name="previous_button">Previous button</string>
    <string name="rewind_button">Rewind Button</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="fast_forward_button">Fast Forward button</string>
    <string name="next_button">Next button</string>
</resources>
