<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Henderson on 2017
  ~ Copyright (c) Hendercine Productions and James Henderson 2017.
  ~ All rights reserved.
  ~
  ~ Last modified 10/11/17 1:24 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFF"
              android:orientation="horizontal"
              android:layout_margin="@dimen/detail_card_margin"
              android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:gravity="center">

        <TextView
            android:id="@+id/ingredient_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="4dp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:text="@string/ingredient_quantity_placeholder"/>

        <TextView
            android:id="@+id/ingredient_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ingredient_quantity"
            android:layout_toEndOf="@+id/ingredient_quantity"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:text="@string/ingredient_measure_placeholder"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        tools:text="@string/ingredient_text_placeholder"/>
    </LinearLayout>
