<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Henderson on 2017
  ~ Copyright (c) Hendercine Productions and James Henderson 2017.
  ~ All rights reserved.
  ~
  ~ Last modified 9/11/17 11:36 PM
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepsDetailActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/exo_player_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="@dimen/detail_card_margin">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/step_thumbnail_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/no_vid_no_thumb_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="64sp"
            android:text="@string/video_not_found"
            tools:text="@string/video_not_found"
            android:visibility="gone"/>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/step_description_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/detail_card_margin"
        android:layout_weight="2">

        <TextView
            android:id="@+id/step_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/text_margin"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/nav_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_btn_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_step_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="@dimen/min_btn_height"
            android:text="@string/next_step_btn"
            android:visibility="visible"/>

        <Button
            android:id="@+id/prev_step_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="@dimen/min_btn_height"
            android:text="@string/previous_step_btn"
            android:visibility="visible"/>
    </LinearLayout>

</LinearLayout>